--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
 	                            <a href="https://pinterest.com"><i class="icon-pinterest" aria-hidden="true"></i></a>
 	                            <a href="https://instagram.com"><i class="icon-Instagram" aria-hidden="true"></i></a>
 	                        </div>
-	                        <p class="topbar-one__text">Mon to Sat: 8.00 am - 7.00 pm</p>
+	                        <p class="topbar-one__text">Mon to Sat: 9.00 am - 6.30 pm</p>
 	                    </div>
 	                    <ul class="topbar-one__right">
-	                        <li class="topbar-one__right-text"><i class="icon-map-pin" aria-hidden="true"></i><a href="https://www.google.com/maps">30 Commercial Road Fratton, Australia </a></li>
-	                        <li class="topbar-one__right-text"><i class="icon-envelope" aria-hidden="true"></i><a href="mailto:motabbirdev@gmail.com"> needhelp@company.com</a></li>
+	                        <li class="topbar-one__right-text"><i class="icon-map-pin" aria-hidden="true"></i><a href="https://www.google.com/maps">Walsham Close SE28 8ND </a></li>
+	                        <li class="topbar-one__right-text"><i class="icon-envelope" aria-hidden="true"></i><a href="mailto:info@agrschoolofmotoring.co.uk"> info@agrschoolofmotoring.co.uk</a></li>
 	                    </ul>
 	                </div>
 	            </div>
@@ -189,8 +189,8 @@
 
 
 
-	                            <li> <a href="about.html">About</a> </li>
-	                            <li class="dropdown"><a href="#">Pages</a>
+	                            <li> <a href="about.html">About Us</a> </li>
+	                            <li class="dropdown"><a href="#">Our Services</a>
 	                                <ul class="sub-menu">
 	                                    <li><a href="team.html">Instructor</a>
 	                                    <li><a href="team-carousel.html">Instructor Carousel</a></li>
@@ -206,7 +206,7 @@
 	                                    <li><a href="404.html">404 Error</a></li>
 	                                </ul>
 	                            </li>
-	                            <li class="dropdown"><a href="#">Courses</a>
+	                            <!-- <li class="dropdown"><a href="#">Courses</a>
 	                                <ul>
 	                                    <li><a href="course.html">Courses</a></li>
 	                                    <li><a href="course-carousel.html">Courses Carousel</a></li>
@@ -261,9 +261,9 @@
 	                                        </ul>
 	                                    </li>
 	                                </ul>
-	                            </li>
+	                            </li> -->
 	                            <li>
-	                                <a href="contact.html">Contact</a>
+	                                <a href="contact.html">Contact Us</a>
 	                            </li>
 	                        </ul>
 	                    </nav><!-- /.main-header__nav -->
@@ -275,7 +275,8 @@
 	                                </div>
 	                                <div class="content">
 	                                    <span class="content__text">Call to Questions</span>
-	                                    <h6 class="content__call">(303) 555-0105</h6>
+	                                    <h6 class="content__call"><a class ="phone-number-contact"href="tel:07465824050">(074) 6582-4050</a>
+										</h6>
 	                                </div>
 	                            </a>
 	                        </div>
