--- a/index.html
+++ b/index.html
@@ -436,13 +436,13 @@
 	                                </div>
 
 	                                <div class="about-one__item__left__contact wow fadeInLeft" data-wow-delay="500ms">
-	                                    <a class="about-one__item__left__contact__link" href="tel:303-555-0105">
+	                                    <a class="about-one__item__left__contact__link" href="tel:07465824050">
 	                                        <div class="about-one__item__left__contact__link__icon">
 	                                            <i class="icon-chat2"></i>
 	                                        </div>
 	                                        <div class="about-one__item__left__contact__link__call">
 	                                            <span class="about-one__item__left__contact__link__subtext">Call to Questions</span>
-	                                            <h6 class="about-one__item__left__contact__link__text">(303) 555-0105</h6>
+	                                            <h6 class="about-one__item__left__contact__link__text">(074) 6582-4050</h6>
 	                                        </div>
 	                                    </a>
 	                                </div>
@@ -463,7 +463,9 @@
 
 	                                    <h3 class="sec-title__title">Ready to Learn Driving in Our Latest Models Vehicles</h3><!-- /.sec-title__title -->
 	                                </div><!-- /.sec-title -->
-	                                <p class="about-one__item__text  wow fadeInUp" data-wow-delay='500ms'>There are many variations of passages of Lorem Ipsum avagtilable, but the majority have suffered alteration in some form, by injected hudfdfmour, or randomised words which don't look</p><!-- /.about-one__item__text -->
+	                                <p class="about-one__item__text  wow fadeInUp" data-wow-delay='500ms'>
+										Our latest model vehicles, offering safety, and the best features for a smooth learning experience. Start today!
+									</p><!-- /.about-one__item__text -->
 	                            </div><!-- /.about-one__item__head -->
 
 	                            <div class="about-one__item__block-contents wow fadeInUp" data-wow-delay="500ms">
